--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -9,7 +9,7 @@ jobs:
   scan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.1.3
+      - uses: actions/upload-artifact@3c86b8185a3c2e8b2ba7f6e9181c46a822ab5ed1
 
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
