--- a/.github/workflows/multi-tool-security-scan.yml
+++ b/.github/workflows/multi-tool-security-scan.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run Bandit (SARIF)
         run: |
           pip install bandit
-          bandit -r . -f json -o bandit-output.json --confidence-level HIGH
+          bandit -r . -f json -o bandit-output.json --confidence-level high
 
       - name: Install Trivy
         run: |
